--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@ sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's us
 # SNS settings
 RSS: false
 # weibo_username:     chendexi
-zhihu_username:     chendexi
-github_username:    chendexi
-facebook_username:  chendexi.chen.7
+zhihu_username:     Mr.Chen
+github_username:    MrMichaelChen
+facebook_username:  chen.dexi.7
 jianshu_username:   ddc1b2117478
 #twitter_username:   chendexi
 
