--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's us
 # SNS settings
 RSS: false
 # weibo_username:     chendexi
-zhihu_username:     Mr.Chen
+zhihu_username:     mr-chen-10-85
 github_username:    MrMichaelChen
 facebook_username:  chen.dexi.7
 jianshu_username:   ddc1b2117478
