--- a/_config.yml
+++ b/_config.yml
@@ -66,6 +66,7 @@ gitalk:
   repo: MrMichaelChen.github.io    #仓库名称
   owner: MrMichaelChen    #github用户名
   admin: MrMichaelChen
+  id: decodeURI(location.pathname)
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
