--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ gitalk:
   repo: MrMichaelChen.github.io    #仓库名称
   owner: MrMichaelChen    #github用户名
   admin: MrMichaelChen
-  id: md5(window.location.pathname)
+  id: decodeURI(window.location.pathname)
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
